2004-09-16  Alexander Gottwald <ago at freedesktop dot org>

	* wincreatewnd.c (winCreateBoundingWindowWindowed):
	Remove code which prevented the use from specifying the window
	size in nodecoration mode. 	

2004-08-02  Kensuke Matsuzaki

	* winclipboardthread.c winclipboardwndproc.c: 
	* winclipboardxevents.c winwin32rootlesswndproc.c:
	Fix the bug that we can't copy & paste multi-byte string to
	Unicode-base Windows application.  Rename fUnicodeSupport to
	fUseUnicode, because it don't mean wheather Windows support
	Unicode or not.
	
2004-07-31  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h:
	adjust prototype for winInitCmapPrivates to match Egberts change.	

2004-07-30  Egbert Eich  <eich at freedesktop dot org>

	* winallpriv.c: (winInitCmapPrivates):
	test if colormap with index really exists in the list of
	installed maps before using it.

2004-07-09  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c: Add entry for irish layout (ie)
	* InitOutput.c, winerror.c, winglobals.c: rename g_fUseMsg to 
	g_fSilentFatalError
	* InitOutput.c, winglobals.c, winprocarg.c: added commandline option 
	-silent-dup-error to allow silent termination if another instance of
	XWin was found running

2004-06-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c: Add entry for us layout. This changes not much but 
	removes a strange error message about the unknown us layout. 

2004-06-24  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c: Check for textmode mounted /tmp and print a warning

2004-06-15  Harold Hunt  <huntharo at msu dot edu>

	* windialogs.c: Fix path to locally installed changelog for the About 
	dialog box.

2004-05-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winpriv.c: Create win32 window if not already created
	* winmultiwindowwindow.c: Export winCreateWindowWindow

2004-05-27  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h: Allow CYGDEBUG to defined in the Makefile